@@ -1,5 +1,10 @@
 2006-07-04  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler_socket.cc (fhandler_socket::listen): Allow listening on
+	unbound INET socket.
+
+2006-07-04  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler.h (fhandler_socket::wait): Set default timeout to INFINITE.
 
 2006-07-03  Corinna Vinschen  <corinna@vinschen.de>
